src/objects/Related_Cases_and_Orgs__c.object
<CustomObject><fields>
        <fullName>Author_Email__c</fullName>
        <formula>Case_ID__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Author__c</fullName>
        <formula>Case_ID__r.Owner:User.FirstName + " " +  Case_ID__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Author</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_ID__c</fullName>
        <inlineHelpText>If you got to page from a Case record, please do not change this field.</inlineHelpText>
        <label>Case ID</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Case must be closed to relate to WIN</errorMessage>
            <filterItems>
                <field>Case.IsClosed</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Closed Cases can be related to WINs</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related WINs</relationshipLabel>
        <relationshipName>Cases_Associated_to_WINs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case_ID__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Organization__c</fullName>
        <formula>Case_ID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Organization</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case_ID__r.Subject</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Relate_Case_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Relate Case One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Relate_Case_WIN_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relate Case/WIN One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Related_WIN_Owner__c</fullName>
        <description>00Nr0000000FiDi.Owner:User.FirstName &amp; " " &amp; 00Nr0000000FiDi.Owner:User.LastName</description>
        <formula>Related_WIN__r.Owner:User.FirstName &amp; " " &amp; Related_WIN__r.Owner:User.LastName</formula>
        <label>Related WIN Owner</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Related_WIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you got to this page from a WIN record, please do not change this field.</inlineHelpText>
        <label>Related WIN</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Related_Cases_and_Orgs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Related_Wins_to_a_Case__c</fullName>
        <label>Related Wins to a Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>WIN_Organization__c</fullName>
        <formula>Related_WIN__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIN Organization</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Cases associated to a WIN</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Relate Case to WIN</label><nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Related Case</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Related Cases/WINs</pluralLabel><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>Related_Cases_and_Orgs</fullName>
        <active>true</active>
        <label>Related Cases and Orgs</label>
    </recordTypes><validationRules>
        <fullName>Cannot_change_Case_or_WIN</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), $User.ProfileId &lt;&gt; "00et0000000U8NX", OR(
AND( NOT(ISBLANK(Case_ID__c)), ISCHANGED(Case_ID__c)), 
AND( NOT(ISBLANK( Related_WIN__c )), ISCHANGED( Related_WIN__c ))
)
)</errorConditionFormula>
        <errorMessage>You do not have permission to change the existing value of a Case or WIN field.</errorMessage>
    </validationRules></CustomObject>